--- a/ros2_ouster/CMakeLists.txt
+++ b/ros2_ouster/CMakeLists.txt
@@ -21,7 +21,9 @@ find_package(tf2_ros REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(ouster_msgs REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common)
-find_package(jsoncpp REQUIRED)
+if (NOT TARGET JsonCpp::JsonCpp)
+  find_package(jsoncpp REQUIRED)
+endif()
 
 include_directories(
   include
